Added type styles, alerts module, reset module

--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
     </header>
     <section>
         <div id="view1" class="layer">
-            <div id="v1slider" class="col-8 content">
-                <h2>This is a Primary Heading</h2>
+            <div id="v1slider" class="col-8 content  scroll">
+                <h2 class="stacked">This is a <small>Primary</small> Heading</h2>
+                <h4 class="subheader">Subheader!</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, eius, iusto, autem magni blanditiis commodi nemo saepe eveniet nobis minima laudantium tempore aperiam rerum suscipit eum. Quo, iste accusamus soluta.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, modi, nesciunt, soluta, delectus quasi blanditiis beatae <code>laudantium</code> enim iste corporis autem assumenda repellat dolor reiciendis consequuntur ad fugiat quam maxime.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <abbr title="No idea what this means.">Repellendus</abbr>, modi, nesciunt, soluta, delectus quasi blanditiis beatae <code>laudantium</code> enim iste corporis autem assumenda repellat dolor reiciendis consequuntur ad fugiat quam maxime.</p>
+                <hr>
+                <div class="alert">This is an alert!!!</div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, quaerat, fugiat iure quam nulla beatae architecto sunt fugit quos dolores doloribus enim eligendi voluptatibus. Facilis, deleniti quis magnam assumenda impedit!</p>
                 <ul>
                     <li>1</li>
                     <li>2</li>
