Added inline lists and transparent buttons

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 <hr>
                 <div class="alert">This is an alert!!!</div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, quaerat, fugiat iure quam nulla beatae architecto sunt fugit quos dolores doloribus enim eligendi voluptatibus. Facilis, deleniti quis magnam assumenda impedit!</p>
+                <button class="primary transparent">I'm a primary button</button>
+                <button class="dark">I'm a dark button</button>
                 <ul>
                     <li>1</li>
                     <li>2</li>
@@ -42,6 +44,19 @@
                         <li>4 yes</li>
                         <li>5 yes</li>
                     </ul></li>
+                </ul>
+
+                <ul class="inline">
+                    <li><a href="#">Item 1</a></li>
+                    <li><a href="#">Item 2</a></li>
+                    <li><a href="#">Item 3</a></li>
+                    <li><a href="#">Item 4</a></li>
+                    <li><a href="#">Item 5</a></li>
+                    <li><a href="#">Item 1</a></li>
+                    <li><a href="#">Item 2</a></li>
+                    <li><a href="#">Item 3</a></li>
+                    <li><a href="#">Item 4 is a real doozy!</a></li>
+                    <li><a href="#">Item 5</a></li>
                 </ul>
                 <blockquote>Those people who think they know everything are a great annoyance to those of us who do.<cite>Isaac Asimov</cite></blockquote>
             </div>
