Refactoring transparent button styles

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
                 <hr>
                 <div class="alert">This is an alert!!!</div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, quaerat, fugiat iure quam nulla beatae architecto sunt fugit quos dolores doloribus enim eligendi voluptatibus. Facilis, deleniti quis magnam assumenda impedit!</p>
+                <input type="text" name="" id="">
                 <button class="primary transparent">I'm a primary button</button>
-                <button class="dark">I'm a dark button</button>
+                <button class="secondary">I'm a dark button</button>
                 <ul>
                     <li>1</li>
                     <li>2</li>
