Added Affixing / Button Groups

--- a/index.html
+++ b/index.html
@@ -30,10 +30,21 @@
                 <hr>
                 <div class="alert">This is an alert!!!</div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, quaerat, fugiat iure quam nulla beatae architecto sunt fugit quos dolores doloribus enim eligendi voluptatibus. Facilis, deleniti quis magnam assumenda impedit!</p>
-                <input type="text" name="" id="">
-                <button class="primary transparent">I'm a primary button</button>
-                <button class="secondary">I'm a dark button</button>
-                <ul>
+                <div class="button-group inline">
+                    <button class="primary">Button 1</button>
+                    <button class="primary">Button 2</button>
+                    <button class="primary">Button 3</button>
+                </div>
+                <div class="button-group inline">
+                    <button>1</button>
+                    <button>2</button>
+                    <button>3</button>
+                </div>
+                <div class="affix-all">
+                    <label class="">Hey there</label><input type="text" name="" id="">
+                     <button class="primary transparent">I'm a primary button</button>
+                     <button class="secondary">I'm a dark button</button>
+                </div> <ul>
                     <li>1</li>
                     <li>2</li>
                     <li>3</li>
