Fixing affixed styles

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <button>3</button>
                 </div>
                 <div class="affix-all">
-                    <label class="">Hey there</label><input type="text" name="" id="">
-                     <button class="primary transparent">I'm a primary button</button>
+                    <label class="prefix">Hey there</label><input type="text" name="" id="" class="affix">
+                     <button class="primary transparent postfix">I'm a primary button</button>
                      <button class="secondary">I'm a dark button</button>
                 </div> <ul>
                     <li>1</li>
