Adding button classes, support for extensions

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </header>
     <section>
-        <div id="view1" class="layer">
+        <div id="view1" class="layer hidden">
             <div id="v1slider" class="col-8 content  scroll">
                 <h2 class="stacked">This is a <small>Primary</small> Heading</h2>
                 <h4 class="subheader">Subheader!</h4>
@@ -104,6 +104,33 @@
                     <h3 class="stacked">We offer amazing deals<br>around the world.</h3>
                     <h4>Scroll down to find out more.</h4>
                 </footer>
+            </div>
+        </div>
+
+        <div id="view2" class="layer">
+            <div class="row-4 content align-center">
+                <h1>Perspective Page View Navigation</h1>
+                <h3>Transforms the page in 3D to reveal a menu</h3>
+            </div>
+            <div class="row-8 content">
+                <div class="col-6 align-right content">
+                    <button class="right large">SHOW MENU</button>
+                    <hr>
+                    <p class="large">Click on this button to see the <br>content being pushed away in 3D to <br>reveal a navigation or other items.</p>
+                    <hr>
+                    <button class="progress fill-horizontal">
+                        <div class="progress-meter"></div>
+                        <span class="progress-content">SUBMIT</span>
+                    </button>
+                </div>
+                <div class="col-6 content">
+                    <button>AIRBNB EFFECT</button>
+                    <button>MOVE LEFT</button>
+                    <button>ROTATE LEFT</button>
+                    <button>MOVE DOWN</button>
+                    <button>ROTATE TOP</button>
+                    <button>LAY DOWN</button>
+                </div>
             </div>
         </div>
     </section>
