Adding _nav.scss

--- a/index.html
+++ b/index.html
@@ -60,51 +60,60 @@
                 <h1>Misc Demo</h1>
             </header>
             
-            <table>
-                <caption>My Table!</caption>
-                <thead>
-                    <tr>
-                        <th>header 1</th>
-                        <th>header 2</th>
-                        <th>header 3</th>
-                        <th>header 4</th>
-                    </tr>
-                </thead>
-                <tfoot>
-                    <tr>
-                        <td>footer 1</td>
-                        <td>footer 2</td>
-                        <td>footer 3</td>
-                        <td>footer 4</td>
-                    </tr>
-                    <tr>
-                        <td>footer 1</td>
-                        <td>footer 2</td>
-                        <td>footer 3</td>
-                        <td>footer 4</td>
-                    </tr>
-                    <tr>
-                        <td>footer 1</td>
-                        <td>footer 2</td>
-                        <td>footer 3</td>
-                        <td>footer 4</td>
-                    </tr>
-                    <tr>
-                        <td>footer 1</td>
-                        <td>footer 2</td>
-                        <td>footer 3</td>
-                        <td>footer 4</td>
-                    </tr>
-                </tfoot>
-                <tbody>
-                    <tr>
-                        <td>body 1</td>
-                        <td>body 2</td>
-                        <td>body 3</td>
-                        <td>body 4</td>
-                    </tr>
-                </tbody>
-            </table>
+            <nav class="horizontal">
+                <ul>
+                    <li>
+                        <a href="">Item 1</a>
+                        <ul>
+                            <li><a href="">Subitem 1</a></li>
+                            <li><a href="">Subitem 2</a></li>
+                            <li><a href="">Subitem 3</a></li>
+                            <li><a href="">Subitem 4</a></li>
+                            <li><a href="">Subitem 5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="">Item 2</a>
+                        <ul>
+                            <li><a href="">Subitem 1</a></li>
+                            <li><a href="">Subitem 2</a></li>
+                            <li><a href="">Subitem 3</a></li>
+                            <li><a href="">Subitem 4</a></li>
+                            <li><a href="">Subitem 5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="">Item 3</a>
+                        <ul>
+                            <li><a href="">Subitem 1</a></li>
+                            <li><a href="">Subitem 2</a></li>
+                            <li><a href="">Subitem 3</a></li>
+                            <li><a href="">Subitem 4</a></li>
+                            <li><a href="">Subitem 5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="">Item 4</a>
+                        <ul>
+                            <li><a href="">Subitem 1</a></li>
+                            <li><a href="">Subitem 2</a></li>
+                            <li><a href="">Subitem 3</a></li>
+                            <li><a href="">Subitem 4</a></li>
+                            <li><a href="">Subitem 5</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="">Item 5</a>
+                        <ul>
+                            <li><a href="">Subitem 1</a></li>
+                            <li><a href="">Subitem 2</a></li>
+                            <li><a href="">Subitem 3</a></li>
+                            <li><a href="">Subitem 4</a></li>
+                            <li><a href="">Subitem 5</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
         </article>
     </section>
 </body>
