Adding _labels.scss

--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
             </footer>
             <form>
                 <fieldset>
-                    <div class="field col-12"><input type="text" placeholder="Credit Card #" name="ccn" id="ccn"></div>
+                    <div class="field topfix col-12"><input type="text" placeholder="Credit Card #" name="ccn" id="ccn"><span class="label infix-right">3</span></div>
                     <div class="field col-6"><input type="text" placeholder="Expiration" name="exp" id="exp"></div>
                     <div class="field col-6"><input type="text" placeholder="CSN" name="csn" id="csn"></div>
-                    <div class="field col-12"><textarea id="" placeholder="Write your message here..."></textarea></div>
-                    <div class="field col-12"><button class="full secondary">Submit</button></div>
+                    <div class="field bottomfix col-12"><textarea id="" placeholder="Write your message here..."></textarea></div>
+                </fieldset>
+                <fieldset>
+                    <div class="field bottomfix col-12"><button class="full secondary">Submit</button></div>
+                    
                 </fieldset>
             </form>
         </article>
@@ -59,61 +62,9 @@
             <header>
                 <h1>Misc Demo</h1>
             </header>
-            
-            <nav class="horizontal">
-                <ul>
-                    <li>
-                        <a href="">Item 1</a>
-                        <ul>
-                            <li><a href="">Subitem 1</a></li>
-                            <li><a href="">Subitem 2</a></li>
-                            <li><a href="">Subitem 3</a></li>
-                            <li><a href="">Subitem 4</a></li>
-                            <li><a href="">Subitem 5</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="">Item 2</a>
-                        <ul>
-                            <li><a href="">Subitem 1</a></li>
-                            <li><a href="">Subitem 2</a></li>
-                            <li><a href="">Subitem 3</a></li>
-                            <li><a href="">Subitem 4</a></li>
-                            <li><a href="">Subitem 5</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="">Item 3</a>
-                        <ul>
-                            <li><a href="">Subitem 1</a></li>
-                            <li><a href="">Subitem 2</a></li>
-                            <li><a href="">Subitem 3</a></li>
-                            <li><a href="">Subitem 4</a></li>
-                            <li><a href="">Subitem 5</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="">Item 4</a>
-                        <ul>
-                            <li><a href="">Subitem 1</a></li>
-                            <li><a href="">Subitem 2</a></li>
-                            <li><a href="">Subitem 3</a></li>
-                            <li><a href="">Subitem 4</a></li>
-                            <li><a href="">Subitem 5</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="">Item 5</a>
-                        <ul>
-                            <li><a href="">Subitem 1</a></li>
-                            <li><a href="">Subitem 2</a></li>
-                            <li><a href="">Subitem 3</a></li>
-                            <li><a href="">Subitem 4</a></li>
-                            <li><a href="">Subitem 5</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
+            <span class="badge secondary">42</span>
+            <span class="label">Hello</span>
+            <a href="#" class="label">I'm a link!</a>
         </article>
     </section>
 </body>
