Adding _themes.scss

--- a/index.html
+++ b/index.html
@@ -4,68 +4,52 @@
     <meta charset="UTF-8">
     <title>Cadenza</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fi_airlines.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </head>
-<body class="page">
-    <section class="row-12">
-        <article class="col-6 foo">
-            <header class="content">
-                <h1>Form Demo</h1>
-            </header>
-            <form>
-                <fieldset>
-                    <div class="field">
-                        <label for="username">Username:</label>
-                        <input type="text" name="username" id="username" class="affix"><span class="label postfix">please enter a good one</span>
+
+<body>
+    <header>
+        <div class="page" id="header-1">
+            <div class="col-9">
+                <form class="full"><input type="text" text="" class="full large" placeholder="Search Flights, Promotions, and Travel tips"></form>
+            </div>
+            <nav class="col-3 horizontal full">
+                <ul>
+                    <li class="col-2"><a href="#">GL</a></li>
+                    <li class="col-5"><a href="#">Login</a></li>
+                    <li class="col-5"><a styhref="#">Help/Support</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section>
+        <article class="page">
+            <div id="slider" class="col-9 content">
+                <div class="row-4 row-bottom">
+                    <div class="col-9 content">
+                        <h2>We fly to more than 70 <br>destinations in Northern Europe</h2>
                     </div>
-                    <div class="field col-4">
-                        <label for="username">Username:</label>
-                        <input type="text" name="username" id="username" class="full">
+                    <div class="col-3 content">
+                        <h3 class="stacked">From USD</h3>
+                        <h1>$640</h1>
                     </div>
-                    <div class="field col-4">
-                        <label for="username">Username:</label>
-                        <input type="text" name="username" id="username" class="full">
-                    </div>
-                    <div class="field col-4">
-                        <label for="username">Username:</label>
-                        <div class="select">
-                            <select name="" id="">
-                                <option value="">option 1</option>
-                                <option value="">option 2</option>
-                                <option value="">option 3</option>
-                                <option value="">option 4</option>
-                                <option value="">option 5</option>
-                            </select>
-                        </div>
-                    </div>
-                    <hr>
-                </fieldset>
-            </form>
-            <footer class="content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, recusandae culpa aspernatur repudiandae nesciunt assumenda nihil velit iusto impedit fuga ab nisi error incidunt alias temporibus voluptates reiciendis itaque. Pariatur!</p>
-            </footer>
-            <form>
-                <fieldset>
-                    <div class="field topfix col-12"><input type="text" placeholder="Credit Card #" name="ccn" id="ccn"><span class="label infix-right">3</span></div>
-                    <div class="field col-6"><input type="text" placeholder="Expiration" name="exp" id="exp"></div>
-                    <div class="field col-6"><input type="text" placeholder="CSN" name="csn" id="csn"></div>
-                    <div class="field bottomfix col-12"><textarea id="" placeholder="Write your message here..."></textarea></div>
-                </fieldset>
-                <fieldset>
-                    <div class="field bottomfix col-12"><button class="full secondary">Submit</button></div>
-                    
-                </fieldset>
-            </form>
-        </article>
-        <article class="col-6 content">
-            <header>
-                <h1>Misc Demo</h1>
-            </header>
-            <span class="badge secondary">42</span>
-            <span class="label">Hello</span>
-            <a href="#" class="label">I'm a link!</a>
+                </div>
+            </div>
         </article>
     </section>
+    <footer>
+        <div class="page" id="footer-1">
+            <nav class="col-8 horizontal full secondary">
+                <ul>
+                    <li class="col-2"><a href="#" class="large">Fly</a></li>
+                    <li class="col-2"><a href="#" class="large">Cruise</a></li>
+                    <li class="col-2"><a href="#" class="large">Drive</a></li>
+                    <li class="col-2"><a href="#" class="large">Sleep</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
+
 </html>
